demo/istio-mtls/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-ns
  labels:
    istio-injection: enabled 
---
apiVersion: v1
kind: Namespace
metadata:
  name: demo
  labels:
    istio-injection: enabled
