demo/istio-mtls/manifests/test-peerauth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: disable-mtls
  namespace: test-ns
spec:
  mtls:
    mode: DISABLE
