demo/istio-mtls/manifests/test-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-client
  namespace: test-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-client
  template:
    metadata:
      labels:
        app: test-client
    spec:
      containers:
      - name: test-client
        image: busybox
        command: ['sh', '-c', 'echo "Test client" && sleep 3600']
